--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.9.0",
-    "sass": "^1.49.10"
+    "sass": "^1.49.10",
+    "vite": "^2.9.1",
+    "vite-plugin-pug": "^0.3.1"
   },
   "dependencies": {
-    "vite": "^2.9.0",
-    "vite-plugin-pug": "^0.3.1"
+    "dotenv": "^16.0.0"
   }
 }
